--- a/7_DOM_Projects/styles.css
+++ b/7_DOM_Projects/styles.css
@@ -102,3 +102,17 @@ main {
     margin-left: 100px;
     margin-right: 100px;
 }
+
+.colorChangeLink{
+    background-color: #7db46cff;
+    padding: 10px 30px;
+    border-radius: 8px;
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+    /* font-size: 1rem; */
+    border: 2px solid #2c5f2d;
+    margin-top: 5px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
